Сделал управление меню в админке

--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -47,43 +47,6 @@
 
 {% endmacro %}
 
-{% macro addMenuLinkButton() %}
-
-    <button class="btn btn-primary btn-add-menu-link" data-toggle="modal" data-target="#add-menu-link-modal"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Добавить ссылку в меню</button>
-
-    <!-- Settings Modal -->
-    <div class="modal modal-settings" id="add-menu-link-modal" tabindex="-1" role="dialog" aria-labelledby="add-menu-link-modal-label" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form action="/e/add-menu-link" method="post">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 id="add-menu-link-modal-label" class="modal-title text-center">Добавить ссылку в меню</h4>
-                    </div>
-                    <div class="modal-body">
-
-                        <div class="form-group">
-                            <label for="new-page-uri-input">URI</label>
-                            <input type="text" name="slug" class="form-control" id="new-page-uri-input" placeholder="newpage">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="new-page-title-input">Текст</label>
-                            <input type="text" name="title" class="form-control" id="new-page-title-input" placeholder="Заголовок новой страницы">
-                        </div>
-
-                    </div><!--//modal-body-->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                        <button type="submit" class="btn btn-primary" id="add-menu-link-button">Добавить</button>
-                    </div>
-                </form>
-            </div><!--//modal-content-->
-        </div><!--//modal-dialog-->
-    </div><!--//modal-->
-
-{% endmacro %}
-
 {% macro loginForm() %}
 
     <div class="container">
@@ -146,7 +109,9 @@
                 <td>
                     <div class="row">
                         {% for field in fields %}
-                            <div class="col-md-{{ field.columns }}">{{ data.text(item[field.name], item._id, field.name, editMode) }}{% if field.link %} <a href="/{{ item.slug }}">ссылка</a>{% endif %}</div>{# Надо параметризировать по какому полю будет искаться зама запись, то что в page slug #}
+                            <div class="col-md-{{ field.columns }}">{{ data.text(item[field.name], item._id, field.name, editMode) }}
+                                {% if field.link %} <a href="{% if field.link.addSlashBefore %}/{% endif %}{{ item[field.name] }}">{{ field.link.caption | default('Перейти') }}</a>{% endif %}
+                            </div>
                         {% endfor %}
                         <div class="col-md-1"><a class="remove-page-button" href="/e/{{ type }}/remove/{{ item._id }}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></div>
                     </div>
@@ -157,43 +122,6 @@
     </table>
 
     {{ admin.addItemButton(type, addCaption, fields) }}
-
-{% endmacro %}
-
-{% macro menuTable(menu) %}
-
-    {% set editMode = true %}
-    {% import "/common/components/data.html.twig" as data %}
-    {% import _self as admin %}
-
-    <table class="table table-hover">
-        <caption>Ссылки меню сайта</caption>
-        <thead class="hidden-sm hidden-xs">
-        <tr>
-            <th>
-                <div class="row">
-                    <div class="col-md-3">URI</div>
-                    <div class="col-md-9">Текст</div>
-                </div>
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for link in menu %}
-            <tr>
-                <td>
-                    <div class="row">
-                        <div class="col-md-3">{#{{ data.text(page.slug, page.slug, 'slug', editMode) }}#} <a href="{{ link.uri }}">ссылка</a></div>
-                        <div class="col-md-8"> {{ link.text }} {#{{ data.text(page.title, page.slug, 'title', editMode) }}#}</div>
-                        <div class="col-md-1"><a class="remove-page-button" href="/e/remove-menu-link?id={{ link._id }}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></div>
-                    </div>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    {{ admin.addMenuLinkButton() }}
 
 {% endmacro %}
 
@@ -212,7 +140,9 @@
                         'caption': 'URI',
                         'placeholder': 'newpage',
                         'columns': 3,
-                        'link': true
+                        'link': {
+                            'addSlashBefore' : true
+                        }
                     }, {
                         'name': 'title',
                         'caption': 'Заголовок',
@@ -223,7 +153,22 @@
 
                 <br/><br/><br/>
 
-                {{ admin.menuTable(menu) }}
+                {{ admin.table(menu, 'menu', 'Ссылки меню сайта', 'Добавить ссылку', [
+                    {
+                        'name': 'uri',
+                        'caption': 'URI',
+                        'placeholder': '/page',
+                        'columns': 3,
+                        'link': {
+                            'addSlashBefore' : false
+                        }
+                    }, {
+                        'name': 'text',
+                        'caption': 'Текст',
+                        'placeholder': 'Ссылка на страницу',
+                        'columns': 8
+                    }
+                ]) }}
 
             </div>
         </div>
