Некоторый рефакторинг PageService

--- a/project/views/templates/startup-kit/admin.html.twig
+++ b/project/views/templates/startup-kit/admin.html.twig
@@ -1,4 +1,4 @@
-{% extends '/templates/' ~ template ~ '/structure/head.html.twig' %}
+{% extends '/templates/startup-kit/structure/head.html.twig' %}
 
 {% import '/common/components/admin.html.twig' as admin %}
 
