--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -69,7 +69,7 @@
                         <input type="password" id="password" name="password" class="form-control"/>
                     </div>
 
-                    <button type="submit" class="btn btn-theme">
+                    <button type="submit" class="btn btn-primary">
                         <i class="fa fa-long-arrow-right"></i>
                         Войти
                     </button>
