Добавил некоторые view для bowling-шаблона, изменил компонент admin.pageProperties

--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -1,4 +1,4 @@
-{% macro pageProperties(page, slug, editMode) %}
+{% macro pageProperties(page, editMode) %}
 
     {% import "/common/components/data.html.twig" as data %}
 
