Зарефакторил вывод модалок

--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -206,3 +206,23 @@
     {% endif %}
 
 {% endmacro %}
+
+{% macro removeAdminElementModal() %}
+    <div class="modal fade" id="remove-page-confirm-modal" tabindex="-1" role="dialog" aria-labelledby="remove-page-confirm-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 id="remove-page-confirm-modal-label" class="modal-title text-center">Удаление страницы</h4>
+                </div>
+                <div class="modal-body">
+                    Уверены, что хотите удалить элемент?
+                </div><!--//modal-body-->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                    <a class="btn btn-primary" id="remove-page-confirm-button">Удалить</a>
+                </div>
+            </div><!--//modal-content-->
+        </div><!--//modal-dialog-->
+    </div><!--//modal-->
+{% endmacro %}
