--- a/project/views/templates/bowling/structure/head.html.twig
+++ b/project/views/templates/bowling/structure/head.html.twig
@@ -44,41 +44,7 @@
 
     {% if editMode %}
 
-        <div class="modal fade" id="delete-item-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="exampleModalLabel">Удаление элемента</h4>
-                    </div>
-                    <div class="modal-body">
-                        Уверены, что хотите удалить этот элемент?
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-theme btn-primary" id="confirm-delete-button" data-dismiss="modal">Да</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Нет</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal fade" id="remove-page-confirm-modal" tabindex="-1" role="dialog" aria-labelledby="remove-page-confirm-modal-label" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 id="remove-page-confirm-modal-label" class="modal-title text-center">Удаление страницы</h4>
-                    </div>
-                    <div class="modal-body">
-                        Уверены, что хотите удалить страницу?
-                    </div><!--//modal-body-->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                        <a class="btn btn-primary" id="remove-page-confirm-button">Удалить</a>
-                    </div>
-                </div><!--//modal-content-->
-            </div><!--//modal-dialog-->
-        </div><!--//modal-->
+        {{ data.removeElementModal() }}
 
     {% endif %}
 
