--- a/project/views/common/components/data.html.twig
+++ b/project/views/common/components/data.html.twig
@@ -224,3 +224,23 @@
 
     {% endif %}
 {% endmacro %}
+
+{% macro removeElementModal() %}
+    <div class="modal fade" id="delete-item-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel">Удаление элемента</h4>
+                </div>
+                <div class="modal-body">
+                    Уверены, что хотите удалить этот элемент?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-theme btn-primary" id="confirm-delete-button" data-dismiss="modal">Да</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Нет</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endmacro %}
