Прикрутил первоначальный base twig-layout. Подставил шрифт Lato с кириллицей вместо этого шрифта без кириллицы

--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -130,7 +130,7 @@
     {% import "/common/components/data.html.twig" as data %}
     {% import _self as admin %}
 
-    <div class="container" style="margin-top: 180px;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-12">
 
