--- a/project/views/templates/bowling/admin.html.twig
+++ b/project/views/templates/bowling/admin.html.twig
@@ -1,10 +1,10 @@
-{% extends '/templates/startup-kit/structure/head.html.twig' %}
+{% extends '/templates/bowling/structure/head.html.twig' %}
 
 {% import '/common/components/admin.html.twig' as admin %}
 
 {% block body %}
 
-    <div style="margin-top: 150px; margin-bottom: 50px;">
+    <div style="padding-top: 150px; padding-bottom: 50px;">
         {{ admin.admin(editMode, allPages, menu, settings) }}
     </div>
 
