--- a/project/views/templates/bowling/body.html.twig
+++ b/project/views/templates/bowling/body.html.twig
@@ -1,5 +1,5 @@
 {% extends '/templates/bowling/structure/head.html.twig' %}
-{#{% import '/templates/bowling/components/top.html.twig' as top %}#}
+{% import '/templates/bowling/components/top.html.twig' as top %}
 {#{% import '/templates/bowling/components/components.html.twig' as components %}#}
 {#{% import '/templates/bowling/components/nav.html.twig' as nav %}#}
 {% import '/common/components/admin.html.twig' as admin %}
@@ -11,7 +11,7 @@
 
     {% for key, section in page.sections %}
         {#{% if     section.type == "SimpleHeadingSection" %}   {{ top.simple(section, page._id, 'sections.' ~ key, editMode) }}#}
-        {#{% elseif section.type == "SliderHeadingSection" %}   {{ top.promo(section, page._id, 'sections.' ~ key, editMode) }}#}
+        {% if section.type == "SliderHeadingSection" %}   {{ top.SliderHeadingSection(section, page._id, 'sections.' ~ key, editMode) }}
 
         {#{% elseif section.type == "OverviewSection" %}       {{ components.overviewSection(section, page._id, 'sections.' ~ key, editMode) }}#}
         {#{% elseif section.type == "FeaturePreviewSection" %} {{ components.featuresPreviewSection(section, page._id, 'sections.' ~ key, editMode) }}#}
