--- a/project/views/templates/bowling/structure/head.html.twig
+++ b/project/views/templates/bowling/structure/head.html.twig
@@ -16,14 +16,14 @@
 
         <script>
             var componentsList = {
-                'SimpleHeadingSection':  'Простая шапка сайта',
-                'PromoHeadingSection':   'Шапка (меняющийся фон, кнопка призыва)',
+//                'SimpleHeadingSection':  'Простая шапка сайта',
+                'SliderHeadingSection':   'Шапка со слайдером',
 
-                'PageNavSection':        'Панель навигации по странице',
+//                'PageNavSection':        'Панель навигации по странице',
 
-                'OverviewSection':       'Описание (три устройства и текст)',
-                'FeaturePreviewSection': 'Описание (одна картинка, текст и фичи)',
-                'FeatureBlocksSection':  'Список фич (картинка и текст)'
+//                'OverviewSection':       'Описание (три устройства и текст)',
+//                'FeaturePreviewSection': 'Описание (одна картинка, текст и фичи)',
+//                'FeatureBlocksSection':  'Список фич (картинка и текст)'
 
             };
         </script>
