--- a/project/views/templates/bowling/structure/base.html.twig
+++ b/project/views/templates/bowling/structure/base.html.twig
@@ -207,9 +207,9 @@
 <!-- SLIDER REVOLUTION 5.0 EXTENSIONS
 (Load Extensions only on Local File Systems !
 The following part can be removed on Server for On Demand Loading) -->
-<{#script type="text/javascript" src="/templates/bowling/js/revolution.extension.layeranimation.min.js"></script>
+<script type="text/javascript" src="/templates/bowling/js/revolution.extension.layeranimation.min.js"></script>
 <script type="text/javascript" src="/templates/bowling/js/revolution.extension.navigation.min.js"></script>
-<script type="text/javascript" src="/templates/bowling/js/revolution.extension.slideanims.min.js"></script>#}
+<script type="text/javascript" src="/templates/bowling/js/revolution.extension.slideanims.min.js"></script>
 <!--SLIDER REVOLUTION CUSTOM-->
 <script type="text/javascript" src="/templates/bowling/js/revolution-custom.js"></script>
 <!--custom-->
