Поменял латинский шрифт Tracks на кириллический RoundVox

--- a/project/views/templates/bowling/structure/base.html.twig
+++ b/project/views/templates/bowling/structure/base.html.twig
@@ -14,6 +14,10 @@
     <!--google font-->
     {#<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">#}
     <link href="/templates/bowling/additional-fonts/lato/lato.css" rel="stylesheet">
+    <link href="/templates/bowling/additional-fonts/bravo-web/stylesheet.css" rel="stylesheet">
+    <link href="/templates/bowling/additional-fonts/AAHaymaker/stylesheet.css" rel="stylesheet">
+    <link href="/templates/bowling/additional-fonts/bricks/stylesheet.css" rel="stylesheet">
+    <link href="/templates/bowling/additional-fonts/VoxRound/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <!--SLIDER-->
     <!--mega menu-->
