--- a/project/views/templates/bowling/components/top.html.twig
+++ b/project/views/templates/bowling/components/top.html.twig
@@ -8,7 +8,7 @@
                 <ul>
                     <li data-index="rs-4" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="templates/bowling/images/slider-2.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="templates/bowling/images/slider-2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                        <img src="/templates/bowling/images/slider-2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                         <!-- LAYER NR. 5 -->
                         <div class="tp-caption  text-orange tp-resizeme  text-center"
                              id="slide-5-layer-1"
@@ -23,7 +23,7 @@
                              data-splitin="none"
                              data-splitout="none"
                              data-responsive_offset="on"
-                             style="font-family:track; z-index: 13; white-space: nowrap; font-size: 60px; line-height: 65px; font-weight: 900;color:#fff;">Русский текст, Fun & Food</div>
+                             style="font-family:VoxRound; text-transform: uppercase; z-index: 13; white-space: nowrap; font-size: 60px; line-height: 65px; font-weight: 900;color:#fff;">Батутный центр Атмосфера Jump</div>{#Lasco WienLight#}
                         <!-- LAYER NR. 9 -->
                         <div class="tp-caption tp-resizeme mo-details-text"
                              id="slide-5-layer-2"
@@ -55,9 +55,9 @@
                              data-responsive_offset="on"
                              style="line-height:20px; font-weight:bold;"> <a style="padding:19px 35px;margin: 18px 0px 18px 5px;" href="contact.html" class="slider-def-btn" data-text="BOOK NOW"><span style="padding-left:0;">BOOK NOW</span></a> <a style="padding:15px 35px; margin:18px 0 18px 5px;" href="about-us.html" class="button button--isi button--round-l" data-text="ABOUT US"><span style="padding-left:0;">ABOUT US</span></a></div>
                     </li>
-                    <li data-index="rs-19" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="templates/bowling/images/slider-1.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+                    {#<li data-index="rs-19" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="templates/bowling/images/slider-1.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="templates/bowling/images/slider-1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                        <img src="/templates/bowling/images/slider-1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                         <!-- LAYERS -->
                         <!-- LAYER NR. 4 -->
                         <div class="tp-caption text-orange tp-resizeme  text-center"
@@ -107,7 +107,7 @@
                     </li>
                     <li data-index="rs-5" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="templates/bowling/images/slider-3.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="templates/bowling/images/slider-3.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                        <img src="/templates/bowling/images/slider-3.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
                         <!-- LAYER NR. 5 -->
                         <div id="trigger" class="spacer s0"></div>
                         <div class="tp-caption  text-orange tp-resizeme  text-center"
@@ -155,6 +155,7 @@
                              data-responsive_offset="on"
                              style="line-height:20px; font-weight:bold;"> <a style="padding:19px 35px;margin: 18px 0px 18px 5px;" href="contact.html" class="slider-def-btn" data-text="BOOK NOW"><span style="padding-left:0;">BOOK NOW</span></a> <a style="padding:15px 35px; margin:18px 0 18px 5px;" href="about-us.html" class="button button--isi button--round-l" data-text="ABOUT US"><span style="padding-left:0;">ABOUT US</span></a></div>
                     </li>
+                    #}
                 </ul>
                 <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
             </div>
