Добавил первые элементы редактирования верхнего блока со слайдами

--- a/project/views/templates/bowling/structure/base.html.twig
+++ b/project/views/templates/bowling/structure/base.html.twig
@@ -93,7 +93,7 @@
 {% block body %}{% endblock %}
 
 <!--footer-->
-<div class="container-fluid padd-50">
+<div class="container-fluid padd-50" id="bottom">
     <div class="container">
 
         <div class="col-md-12 text-center"><img src="/templates/bowling/images/footer-logo.png" /></div>
