--- a/project/views/templates/bowling/structure/head.html.twig
+++ b/project/views/templates/bowling/structure/head.html.twig
@@ -8,6 +8,7 @@
         <link href="/plugins/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
         <link href="/plugins/edit-tools/edit-tools.css" rel="stylesheet">
         <link href="/plugins/slide-panel/style.css" rel="stylesheet">
+        <link  href="/plugins/fancybox-3.0/dist/jquery.fancybox.min.css" rel="stylesheet">
     {% endif %}
 {% endblock %}
 
@@ -31,6 +32,7 @@
         <script src="/plugins/bootstrap3-editable/js/bootstrap-editable.js"></script>
         <script src="/plugins/bootstrap3-editable/js/link-editable.js"></script>
         <script src="/plugins/edit-tools/edit-tools.js"></script>
+        <script src="/plugins/fancybox-3.0/dist/jquery.fancybox.min.js"></script>
 
     {% endif %}
 
